testsuite/tests/typing-modules-bugs/pr7112_bad.compilers.reference
File "pr7112_bad.ml", line 13, characters 30-31:
Error: Signature mismatch:
       Modules do not match: F(N).S is not included in A.S
